--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p><strong>Your Personal Guide to Academic Success!</strong></p>
         <p>Course Compass helps students stay organized by managing courses, tracking assessments, setting reminders, and generating progress reports – all in one convenient app.</p>
         
-        <a class="download-btn" href="https://drive.google.com/uc?export=download&id=1IKRESqSpKKXnhiOgkynSNMxk-YRae9pH" download="CourseCompass.apk">
+        <a class="download-btn" href="https://drive.google.com/file/d/1JYh21YzlottBZ3cSfKLJC6ThuXGW5XH1/view?usp=drive_link" download="CourseCompass.apk">
             Download Course Compass Version 1.2
         </a>
         
